# vview

./: LICENSE  README.md  pyproject.toml
src/vview/: __init__.py  main.py  nk.py
src/vview/core/: thumb.py  utils.py
src/vview/core/scanner/: __init__.py  interface.py  utils.py
src/vview/core/scanner/plugins/minimal/: __init__.py  core.py  scanner.py  utils.py
src/vview/core/thumb/: base.py  fake.py  nk.py
src/vview/gui/: __init__.py  main.py  resources.py  resources.qrc  style.py  utils.py
src/vview/gui/css/: base.css  header.css  item.css  list.css
src/vview/gui/widgets/: __init__.py  dialog_widget.py  elided_label.py  header_widget.py  item_widget.py  list_widget.py
tests/: dialog_widget.py  item_widget.py  list_widget.py  qt_pyqt.py  qt_pyside.py
tests/unit_tests/: minimal_scan.py
tests/widgets/: dialog.py
