[project]
name = "vview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7.3"
dependencies = [
    "PySide2==5.13.2",
    "types-nuke>=13.2.8.0",
    "types-pyside2",
]

[project.scripts]
vview = "vview:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
